# ctx-mcp

./: .gitignore  README.md  architecture.yaml  pyproject.toml
src/: builder.py  graph_builder.py  main.py  models.py
src/core/: builder.py  builder_enhanced.py  cache.py  models.py  storage.py  watcher.py
src/core/parsers/: __init__.py  edge.py  node.py  text.py
src/parsers/: edge.py  node.py  text.py
